Fix styling scrollbar for chat messenger. Fix search bar to be dynamic

--- a/app/assets/stylesheets/all_dms.scss
+++ b/app/assets/stylesheets/all_dms.scss
@@ -1,5 +1,5 @@
 .all-dm-list-container {
-  margin-top: 1rem;
+  margin: 1rem 0;
   border-radius: 8px;
   background-color: #ffffff;
   width: 100%;
