--- a/app/assets/stylesheets/chat_client.scss
+++ b/app/assets/stylesheets/chat_client.scss
@@ -5,6 +5,7 @@
   position: relative;
   flex-direction:column;
   font-family: "Lato";
+  overflow: hidden;
 }
 
 .client-grid {
